crates/goby-core/src/snapshots/goby_core__ir_lower__tests__lower_binop_add.snap
---
source: crates/goby-core/src/ir_lower.rs
assertion_line: 464
expression: fmt_ir(&m)
---
decl add(a: ?, b: ?): ? =
  (a + b)
