crates/goby-core/src/snapshots/goby_core__ir_lower__tests__lower_block_expr.snap
---
source: crates/goby-core/src/ir_lower.rs
assertion_line: 556
expression: fmt_ir(&m)
---
decl block_fn: ? =
  let x: Int =
    5
  in
    x
