crates/goby-core/src/snapshots/goby_core__ir_lower__tests__lower_bool_lit.snap
---
source: crates/goby-core/src/ir_lower.rs
assertion_line: 417
expression: fmt_ir(&m)
---
decl flag: ? =
  false
