crates/goby-core/src/snapshots/goby_core__ir_lower__tests__lower_call_curried.snap
---
source: crates/goby-core/src/ir_lower.rs
assertion_line: 577
expression: fmt_ir(&m)
---
decl call_test(f: ?, a: ?, b: ?): ? =
  call f(a, b)
