crates/goby-core/src/snapshots/goby_core__ir_lower__tests__lower_declaration_residual_effects_in_fmt.snap
---
source: crates/goby-core/src/ir_lower.rs
assertion_line: 855
expression: fmt_ir(&m)
---
decl io_fn: ? can IO =
  42
