crates/goby-core/src/snapshots/goby_core__ir_lower__tests__lower_equiv_read_bind_interp_then_print.snap
---
source: crates/goby-core/src/ir_lower.rs
assertion_line: 1147
expression: fmt_ir(&m)
---
decl prog3: ? =
  let text: ? =
    perform Read.read()
  in
    let decorated: Str =
      interp(expr(text), "!")
    in
      perform Print.print(decorated)
