crates/goby-core/src/snapshots/goby_core__ir_lower__tests__lower_equiv_read_bind_then_print.snap
---
source: crates/goby-core/src/ir_lower.rs
assertion_line: 1113
expression: fmt_ir(&m)
---
decl prog2: ? =
  let text: ? =
    perform Read.read()
  in
    perform Print.print(text)
