crates/goby-core/src/snapshots/goby_core__ir_lower__tests__lower_handler_with_clause.snap
---
source: crates/goby-core/src/ir_lower.rs
assertion_line: 750
expression: fmt_ir(&m)
---
decl read_handler: ? =
  handler
    read(resume) ->
      resume "hi"
