crates/goby-core/src/snapshots/goby_core__ir_lower__tests__lower_if_expr.snap
---
source: crates/goby-core/src/ir_lower.rs
assertion_line: 506
expression: fmt_ir(&m)
---
decl check(b: ?): ? =
  if b then
    1
  else
    0
