crates/goby-core/src/snapshots/goby_core__ir_lower__tests__lower_int_lit.snap
---
source: crates/goby-core/src/ir_lower.rs
assertion_line: 408
expression: fmt_ir(&m)
---
decl answer: ? =
  42
