crates/goby-core/src/snapshots/goby_core__ir_lower__tests__lower_interpolated_string_pure.snap
---
source: crates/goby-core/src/ir_lower.rs
assertion_line: 594
expression: fmt_ir(&m)
---
decl greet(name: ?): ? =
  interp("Hello, ", expr(name), "!")
