crates/goby-core/src/snapshots/goby_core__ir_lower__tests__lower_let_binding.snap
---
source: crates/goby-core/src/ir_lower.rs
assertion_line: 521
expression: fmt_ir(&m)
---
decl with_let: ? =
  let x: Int =
    10
  in
    x
